--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,41 @@
 :root {
     --gap: 24px;
-    --masthead-height: 60px;
+    --masthead-height: 200px;
 }
 
 .navbar {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    line-height: calc(var(--masthead-height));
+    height: calc(var(--masthead-height));
     margin-inline-start: auto;
     margin-inline-end: auto;
+    background-image: url("/theme/NighttimeGradient.png");
+}
+
+@media (prefers-color-scheme: light) {
+    .navbar {
+        background-image: url("/theme/DaytimeGradient.png");
+    }
 }
 
 .navbar #logo {
-    font-size: 24px;
+    font-size: 32px;
+    font-family: "Delicious Handrawn", cursive;
+    font-style: normal;
     font-weight: bold;
     color: var(--text-color);
+    margin: auto var(--gap);
+    margin-top: 12px;
+    margin-left: 24px;
+
 }
 
 .navbar #menu {
     list-style: none;
     display: flex;
-    margin: auto var(--gap)
+    margin: auto var(--gap);
+    margin-top: 24px;
+
 }
 
 .navbar #menu a {
