--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,14 @@
     }
 }
 
+.cloud {
+    width: 203px;
+    height: 121px;
+    background: url("/theme/spritesheet_default.png") -250px -365px;
+    /*background-position: 250px 365px;*/
+    position: absolute;
+}
+
 .navbar #logo {
     font-size: 32px;
     font-family: "Delicious Handrawn", cursive;
@@ -25,9 +33,9 @@
     font-weight: bold;
     color: var(--text-color);
     margin: auto var(--gap);
-    margin-top: 12px;
-    margin-left: 24px;
-
+    margin-top: 22px;
+    margin-left: 42px;
+    z-index: 100;
 }
 
 .navbar #menu {
